# ChangeLog for net-im/gaim-blogger
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/gaim-blogger/Attic/ChangeLog,v 1.11 2004/07/03 18:44:02 rizzo Exp $

*gaim-blogger-0.79_p1 (03 Jul 2004)

  03 Jul 2004; Don Seiler <rizzo@gentoo.org> +gaim-blogger-0.79_p1.ebuild:
  Version bump for new upstream patch release

  30 Jun 2004; Don Seiler <rizzo@gentoo.org> :
  Version bump

  28 Jun 2004; Don Seiler <rizzo@gentoo.org> :
  Removing old files for gaim pruning

*gaim-blogger-0.78 (31 May 2004)

  31 May 2004; Don Seiler <rizzo@gentoo.org>; +gaim-blogger-0.78.ebuild:
  Version bump for Bug #52599.

  27 Apr 2004; Don Seiler <rizzo@gentoo.org>; -gaim-blogger-0.76.ebuild:
  Removing obsolete version

  25 Apr 2004; David Holm <dholm@gentoo.org> gaim-blogger-0.77.ebuild:
  Added to ~ppc.

*gaim-blogger-0.77 (23 Apr 2004)

  23 Apr 2004; Don Seiler <rizzo@gentoo.org>; +gaim-blogger-0.77.ebuild:
  Version bump

*gaim-blogger-0.76 (02 Apr 2004)

  02 Apr 2004; Don Seiler <rizzo@gentoo.org>; gaim-blogger-0.75.ebuild,
  gaim-blogger-0.76.ebuild:
  Version bump

  02 Apr 2004; Don Seiler <rizzo@gentoo.org>; gaim-blogger-0.75.ebuild:
  Changing dep to gaim-0.75

*gaim-blogger-0.75 (16 Jan 2004)

  16 Jan 2004; Don Seiler <rizzo@gentoo.org>; gaim-blogger-0.75.ebuild,
  metadata.xml:
  Initial import.  Found out about it hanging around in #gaim
