@@ -1,4 +1,6 @@
 MD5 a8f01909c242eb5f53a8c37b0716c6f8 ChangeLog 1408
+MD5 b894d3db8fcfbf75fc69c40576aa3234 gaim-blogger-0.81.ebuild 976
 MD5 cc472fba95d8a54396fde67e2d303086 metadata.xml 639
 MD5 8aea268689ed7b39c279a6a03c8015c7 gaim-blogger-0.79_p1.ebuild 1005
+MD5 473182cff212dfc9d5d220d64a2a5252 files/digest-gaim-blogger-0.81 69
 MD5 2fc34c3b11b744e9e65533ba937f410a files/digest-gaim-blogger-0.79_p1 71
