@@ -1,6 +1,11 @@
 # ChangeLog for net-im/gaim-blogger
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gaim-blogger/Attic/ChangeLog,v 1.11 2004/07/03 18:44:02 rizzo Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gaim-blogger/Attic/ChangeLog,v 1.12 2004/08/09 15:21:03 rizzo Exp $
+
+*gaim-blogger-0.81 (09 Aug 2004)
+
+  09 Aug 2004; Don Seiler <rizzo@gentoo.org> +gaim-blogger-0.81.ebuild:
+  Version bump
 
 *gaim-blogger-0.79_p1 (03 Jul 2004)
 
